fix: Fixed nav buttons on iOS [PT-184640434]
Added padding as per request from Dan.

--- a/src/components/activity-header/nav-pages.scss
+++ b/src/components/activity-header/nav-pages.scss
@@ -22,6 +22,7 @@
     box-sizing: border-box;
     background-color: white;
     cursor: pointer;
+    padding: 1px 6px;
 
     .icon {
       fill: var(--theme-primary-color);
